--- a/Example1/Example1/Example1.Android/Example1.Android.csproj
+++ b/Example1/Example1/Example1.Android/Example1.Android.csproj
@@ -95,7 +95,6 @@
     <Folder Include="Resources\drawable-xhdpi\" />
     <Folder Include="Resources\drawable-xxhdpi\" />
     <Folder Include="Resources\drawable-xxxhdpi\" />
-    <Folder Include="Resources\drawable\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\BusinnessLayer\BusinnessLayer.csproj">
@@ -106,6 +105,9 @@
       <Project>{DE79656B-4C66-4070-BD77-6AD55BA36EEE}</Project>
       <Name>Example1</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Resources\drawable\car.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
